<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hugr</name>
  <version>0.0.1</version>
  <description>
    Robot behavior control.
  </description>

  <maintainer email="kelleherguerin@gmail.com">Kelleher Guerin</maintainer>

  <license>Proprietary</license>

  <author>Kelleher Guerin</author>

  <build_depend>python3-setuptools</build_depend>
  <build_depend>pyqt5-dev-tools</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>
  <build_depend>hugr_interfaces</exec_depend>

  <!-- mock dependencies -->
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>python3-qt5-bindings</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- tree dependencies -->
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>py_trees_ros_interfaces</exec_depend>
  <exec_depend>hugr_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2topic</exec_depend>

  <!-- test dependencies -->
  <test_depend>python3-pytest</test_depend>
  <test_depend>action_msgs</test_depend>
  <test_depend>py_trees</test_depend>
  <test_depend>py_trees_ros</test_depend>
  <test_depend>rclpy</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
